[package]
name = "news-monitor"
version = "0.1.0"
authors = ["ovo <peyton.arbuckle@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10"
tokio = { version = "0.2", features = ["full"] }
scraper = "0.11"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
